<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/txt_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="94dp"
        android:text="Set 9-digit Phone Number"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keyboard_layout"
        android:layout_width="412dp"
        android:layout_height="482dp"
        android:layout_marginTop="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_weight="1"
                android:text="@string/btn_one"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_weight="1"
                android:text="@string/btn_two"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:text="@string/btn_three"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btn_four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_four"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_five"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_six"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <Button
                android:id="@+id/btn_seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_seven"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_eight"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_nine"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/function_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="153dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <Button
                android:id="@+id/btn_zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_zero"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_back"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_back"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_ok"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OK"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>